# OpenVault

./: Cargo.toml  Dockerfile  README.md  justfile
.github/workflows/: ci.yml  docker.yml  release.yml
config/: example.yaml
crates/openvault-cli/: Cargo.toml
crates/openvault-cli/src/: main.rs
crates/openvault-cli/tests/: full_pipeline.rs
crates/openvault-core/: Cargo.toml
crates/openvault-core/src/: audit.rs  bench.rs  compliance.rs  compress.rs  config.rs  crypto.rs  engine.rs  error.rs  healing.rs  incremental.rs  integrity.rs  lib.rs  notification.rs  pipeline.rs  policy.rs  replicator.rs  restore.rs  search.rs  snapshot.rs  storage.rs  strategy.rs  tenant.rs
crates/openvault-intel/: Cargo.toml
crates/openvault-intel/src/: anomaly.rs  classifier.rs  lib.rs  scheduler.rs
crates/openvault-server/: Cargo.toml
crates/openvault-server/src/: agent_api.rs  api.rs  auth.rs  device_manager.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  services.rs  static_files.rs  web_api.rs  web_ui.rs
crates/openvault-server/src/handlers/: agent_manifest.rs
crates/openvault-storage/: Cargo.toml
crates/openvault-storage/src/: lib.rs  local.rs  r2.rs  s3.rs
crates/openvault-transport/: Cargo.toml
crates/openvault-transport/src/: config.rs  error.rs  lib.rs  router.rs  transport.rs
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml
docs/: agent-guide.md  api-reference.md  backup-strategies.md  deployment.md  getting-started.md  user-guide.md
项目文档/OpenVault/: INDEX.md
项目文档/OpenVault/规划/: hot-rules.md
