[workspace]
members = [
    "crates/openvault-core",
    "crates/openvault-storage",
    "crates/openvault-cli",
    "crates/openvault-transport",
    "crates/openvault-server",
]
resolver = "2"

[workspace.dependencies]
indexmap = "<2.14"
tempfile = "3"

# Common dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "macros"] }
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }
