[workspace]
members = [
    "crates/openvault-core",
    "crates/openvault-storage",
    "crates/openvault-cli",
    "crates/openvault-transport",
    "crates/openvault-server",
    "crates/openvault-intel",
]
resolver = "2"

[workspace.dependencies]
tempfile = "3"

# Common dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "macros"] }
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
uuid = { version = "1", features = ["v4", "serde"] }

# Pin versions that require edition2024 on older Rust compilers
# base64ct >=1.7 uses edition2024 (pulled in by argon2/password-hash)
base64ct = "<1.7"
# indexmap >=2.7 uses edition2024 (pulled in by various deps)
indexmap = "<2.7"
