[package]
name = "openvault-core"
version = "0.1.0"
edition = "2021"
description = "OpenVault core abstractions, types, and backup engine"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
thiserror = "1"
anyhow = "1"

[dev-dependencies]
tempfile = "3"
