[package]
name = "openvault-core"
version = "0.1.0"
edition = "2021"
description = "OpenVault core abstractions, types, and backup engine"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
thiserror = "1"
anyhow = "1"
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
base64 = "0.22"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "io-util", "sync"] }
futures = "0.3"
hex = "0.4"
filetime = "0.2"

[dev-dependencies]
tempfile = "3"
