[package]
name = "openvault-intel"
version = "0.1.0"
edition = "2021"
description = "OpenVault AI intelligence layer: file classification, anomaly prediction, smart scheduling"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1"
anyhow = "1"
regex = "1"
tracing = "0.1"

openvault-core = { path = "../openvault-core" }

[dev-dependencies]
tempfile = "3"
