[package]
name = "openvault-server"
version = "0.1.0"
edition = "2021"
description = "OpenVault HTTP API server for remote backup management"

[[bin]]
name = "openvault-server"
path = "src/main.rs"

[dependencies]
# HTTP server
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "fs", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "1"
anyhow = "1"

# Async runtime
futures = "0.3"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
jsonwebtoken = "9"
clap = { version = "4", features = ["derive"] }
rand = "0.8"
hex = "0.4"
sha2 = "0.10"

# OpenVault types
openvault-core = { path = "../openvault-core" }
openvault-transport = { path = "../openvault-transport" }

# HTTP client (for webhook notifications)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Encryption
aes-gcm = "0.10"

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
