[package]
name = "openvault-storage"
version = "0.1.0"
edition = "2021"
description = "OpenVault storage backend implementations"

[dependencies]
openvault-core = { path = "../openvault-core" }
tokio = { version = "1", features = ["fs", "io-util"] }
anyhow = "1"
serde_json = "1"

[dev-dependencies]
tempfile = "3"
