[package]
name = "openvault-storage"
version = "0.1.0"
edition = "2021"
description = "OpenVault storage backend implementations"

[dependencies]
openvault-core = { path = "../openvault-core" }
tokio = { version = "1", features = ["fs", "io-util"] }
anyhow = "1"
serde_json = "1"
# S3 backend dependencies
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
urlencoding = "2"

[dev-dependencies]
tempfile = "3"
