[package]
name = "openvault-transport"
version = "0.1.0"
edition = "2021"
description = "OpenVault OpenLink transport integration for remote backup management"

[dependencies]
# Core dependencies
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "fs", "io-util", "sync", "net"] }
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
url = "2"
urlencoding = "2"
hostname = "0.4"

# OpenVault core types (path-based for local development)
openvault-core = { path = "../openvault-core" }

[dev-dependencies]
tempfile = "3"
tokio-test = "0.4"
